2001-10-14  Marcus Brinkmann  <marcus@gnu.org>

	* glue-include/linux/sched.h (process_schedule_timeout): New
	function used as timer callback for schedule_timeout.
	(schedule_timeout): Implement it.
	Suggested by "kurian kattukaren" <kjk_bugs@rediffmail.com>.

2001-07-25  Mark Kettenis  <kettenis@gnu.org>

	* glue-include/linux/socket.h (SOMAXCONN): Only define if it
	wasn't already.
	(msg_control, msg_controllen, struct cmsghdr, cmsg_len, cmsg_type,
	cmsg_level, CMSG_FIRSTHDR, CMSG_NXTHDR, CMSG_DATA, CMSG_LEN): Only
	define if CMSG_DATA wasn't already defined.

2001-07-18  Marcus Brinkmann  <marcus@gnu.org>

	* linux-src/net/ipv4/devinit.c (configure_device): Initialize IFA
	correctly.  If we are setting the peer on an IFF_POINTOPOINT link,
	force the netmask to 255.255.255.255.
	By Neal H Walfield <neal@cs.uml.edu>.
	
2001-07-13  Neal H Walfield  <neal@cs.uml.edu>

	* options.c (parse_opt): In the cases where we hold global_lock
	and fail, we must release the lock before calling FAIL.

2001-06-08  Marcus Brinkmann  <marcus@gnu.org>

	* timer-emul.c (add_timer): Don't add jiffies to EXPIRES, it is
	the responsibility of the caller to do this.

2001-02-25  Roland McGrath  <roland@frob.com>

	* Makefile (asm/checksum.h): New target.
	(CPPFLAGS): Don't set _HURD_SYSTYPE.
	* glue-include/asm/checksum.h: File removed.

	* linux-src/include/linux/net.h (struct file): Move forward
	decl outside of `struct socket' type definition, for gcc-2.96 syntax.

2001-01-17  Marcus Brinkmann  <marcus@gnu.org>

	* iioctl-ops.c (siocsifXaddr): Remove incorrect comment
	about isroot.
	(S_iioctl_siocsifflags): Likewise.
	(S_iioctl_siocsifmtu): And one more time.

2001-01-07  Marcus Brinkmann  <marcus@gnu.org>

	* pfinet-ops.c: New file to implement hurd/pfinet.defs.

	* iioctl-ops.c: New file to implement iioctl.defs.
	* linux-src/net/core/dev.c: If _HURD_, don't define netdev_chain as
	static.

	* glue-include/linux/if.h: New file, to avoid conflict between