@@ -1,3 +1,7 @@
+2002-01-30  Marcus Brinkmann  <marcus@gnu.org>
+
+	* tunnel.c (trivfs_S_io_select): Remove IDTAG argument.
+
 2001-10-14  Marcus Brinkmann  <marcus@gnu.org>
 
 	* glue-include/linux/sched.h (process_schedule_timeout): New
